<resources>
    <string name="app_name">Pawestruck</string>
    <string name="title_contact_verification">Contact Verification</string>
    <string name="title_filter">Filter</string>
    <string name="title_add_post">Add Post</string>
    <string name="title_information">Information</string>
    <string name="title_choose_image_dp">Choose Display Picture</string>
    <string name="title_choose_image_pet">Choose Pet Image</string>
    <string name="acc_needed_profile">Please sign up or login to view your Profile</string>
    <string name="acc_needed_bookmark">Please sign up or login to bookmark posts</string>
    <string name="acc_needed_report">Please sign up or login to report posts</string>
    <string name="acc_needed_post">Please sign up or login to put up a post</string>
    <string name="acc_verify">Please verify your E-Mail address or Mobile number to create a post</string>
    <string name="bookmark_own">You can\'t unbookmark your own post</string>
    <string name="no_internet">Error: No Internet. Please enable WiFi or Mobile Data and try again</string>
    <string name="no_address">The user hasn\'t provided the location of the pet</string>
    <string name="no_phone">The user hasn\'t provided their contact number</string>
    <string name="no_gps">Error: GPS Disabled. Please enable Location Service (GPS) and try again</string>
    <string name="location_detected">Current location detected</string>
    <string name="post_reported">Post Reported</string>
    <string name="error_fetch_location">Unable to fetch location. Please restart your GPS and the app and try again.
        This could be due to a poor Internet connection</string>
    <string name="allow_permission_storage">Please go to App Permissions in Phone Settings and
        allow Pawestruck to access your storage to select an image</string>
    <string name="allow_permission_location">Please go to App Permissions in Phone Settings and
        allow Pawestruck to access your location to filter by Distance</string>
    <string name="default_field">-</string>
    <string name="sign_name">Name</string>
    <string name="sign_email">E-Mail</string>
    <string name="sign_password">Password</string>
    <string name="sign_login">Login</string>
    <string name="sign_signup">Sign Up</string>
    <string name="sign_no_account">Don\'t have an account? <u>Sign up!</u></string>
    <string name="sign_have_account">Have an account already? <u>Login!</u></string>
    <string name="sign_remember_password"><u>Oh wait, now I remember!</u></string>
    <string name="sign_reset_password">Reset Password</string>
    <string name="sign_forgot_password"><u>Forgot password?</u></string>
    <string name="sign_bad_email">Error: Enter a valid E-Mail address</string>
    <string name="sign_bad_password">Error: Password too short (Minimum 8 characters)</string>
    <string name="sign_bad_username">Error: Username can\'t be empty</string>
    <string name="sign_err_pass">Error: Incorrect Password</string>
    <string name="sign_err_user">Error: The user doesn\'t exist. Please sign up!</string>
    <string name="sign_reset_password_sent">An e-mail has been sent to reset your password</string>
    <string name="sign_email_verify">An e-mail has been sent to verify your account</string>
    <string name="addp_error_image">Please upload at least one image</string>
    <string name="addp_error_description">Please enter the description</string>
    <string name="addp_error_location">Please pick a location</string>
    <string name="addp_description">Post Description - Age, Behavioural Traits, Vaccination Details, Sterilisation Status, Provision
        of Health Card etc. (Max 1000 characters)</string>
    <string name="addp_pet_image">Pet Image</string>
    <string name="addp_edit_location">Edit Location of Pet</string>
    <string name="addp_post">Post</string>
    <string-array name="addp_animal_spinner">
        <item>@string/filter_animal1</item>
        <item>@string/filter_animal2</item>
        <item>@string/filter_animal3</item>
    </string-array>
    <string name="addp_note">Note: All details entered here will be shared publicly when posted.</string>
    <string name="addp_exit">Press Back again to exit. All changes will be lost</string>
    <string name="discourage_gender">Sorry, we discourage adoption based on the gender of the animal. Why? Because
        we want to put away the stereotype that a female pet is inferior to a male pet. A female pet is as playful
        as a male one. As loving as a male one. As loyal as a male one. As fierce as a male one. Worried that a
        female pet would give birth to another litter? Please consult your local shelter about Sterilisation/ Animal
        Birth Control (ABC). This is suggested for both male and female pets. Refer to the Sterilisation section on
        the FAQ page for more details. Please don\'t discriminate by gender! All animals are equally lovely!</string>
    <string name="discourage_breed">Sorry, we discourage adoption based on the breed of the animal. Why? Because we
        condemn breeders who just look for \"exotic-breed\" animals, abuse them, abandon them and make money out of
        this cruel practice (Refer FAQs for more details).\n\nThe breed of the pet doesn\'t entirely determine its
        temperament. We have come across super-friendly Pitbulls and aggressive Golden Retrievers. If you\'re looking
        for a pet with specific behavioural traits, please visit and get along with the pet before taking him/her
        home. Please don\'t discriminate by breed! All animals are equally lovely!</string>
    <string name="otp_phone">Phone Number</string>
    <string name="otp_code">OTP</string>
    <string name="otp_invalid_number">Error: Invalid Mobile Number</string>
    <string name="otp_send">Send OTP</string>
    <string name="otp_message">By tapping &quot;Send OTP&quot;, an SMS may be sent. Message and data rates may apply.</string>
    <string name="otp_verify">Verify OTP</string>
    <string name="otp_link_success">Mobile number linked successfully!</string>
    <string name="otp_link_failure">Error: Mobile number linked to another account</string>
    <string name="otp_sent">An OTP has been sent</string>
    <string name="otp_null">Error: No OTP has been detected. Please provide your mobile number and click the Send button</string>
    <string name="otp_note">Note: Your verified mobile number is displayed publicly when you post.
        It can only be changed, and not deleted. </string>
    <string name="otp_verification_failure">Error: Incorrect OTP</string>
    <string name="prof_no_internet_dp">Error: No Internet. Please enable WiFi or Mobile Data for the change to take effect!</string>
    <string name="prof_signout">Sign Out</string>
    <string name="prof_dp">Display Picture</string>
    <string name="prof_email_status">Email Verification Status</string>
    <string name="prof_edit_phone">Edit Phone Number</string>
    <string name="prof_edit_location">Edit Location</string>
    <string name="prof_verified">Your e-mail address has been verified</string>
    <string name="prof_unverified">Your e-mail address hasn\'t been verified. Please click the link in the mail we\'ve sent to verify</string>
    <string name="post_adopted">Mark as Adopted</string>
    <string name="post_adopted_prompt">Are you sure you want to mark this pet as "Adopted"? This action is irreversible.</string>
    <string name="post_report">Report Post</string>
    <string name="post_report_prompt">Are you sure you want to report this post? This action is irreversible.</string>
    <string name="post_delete">Delete Post</string>
    <string name="post_delete_prompt">Are you sure you want to delete this post? This action is irreversible.</string>
    <string name="home_no_internet">Error: No Internet. Please enable WiFi or Mobile Data to view the refreshed list!</string>
    <string name="home_none">Oops! No post matches your filter criteria!</string>
    <string name="home_error_distance">Error: Enter a whole number between 0 and 20038 (maximum possible distance)</string>
    <string name="home_welcome">Hello there! Thanks for downloading our app! By using this app, you consent
        to our Privacy Policy and Terms and Conditions at https://sites.google.com/view/pawestruck. Please head over to the FAQ section
        in the paw-menu at the bottom and go through the rules for using the app. Remember, this platform is
        <b>strictly for ethical adoptions!</b> Welcome to Pawestruck! Swipe down to dismiss me</string>
    <string name="home_exit">Press Back again to exit</string>
    <string name="mark_none">No posts have been bookmarked. Click the <i>Eye</i> icon to bookmark a post. Your posts,
        by default, appear here too. If your bookmarks aren\'t appearing, wait a bit longer please!</string>
    <string name="supp_info">You can view our Privacy Policy and Terms and Conditions at https://sites.google.com/view/pawestruck</string>
    <string-array name="supp_questions">
        <item>GETTING STARTED</item>
        <item>What is the point of Pawestruck?</item>
        <item>Rules for using Pawestruck:</item>
        <item>APP INFO AND USAGE</item>
        <item>Is this app free?</item>
        <item>Account creation is tiring! Do I need one to use the app?</item>
        <item>Can I create a single account on behalf of an organization?</item>
        <item>I\'m not comfortable sharing my personal information, is that okay?</item>
        <item>Do I need a picture of the pet to post an adoption alert? How many images can I upload?
            And how about a cute video too?</item>
        <item>Yay! My pet got adopted! Now what?</item>

        <item>GENERAL</item>
        <item>Why adopt and not shop?</item>
        <item>Why are you guys against breeding?</item>
        <item>Sterilisation/ Birth Control?! Isn\'t it unethical?!</item>

        <item>APP ISSUES</item>
        <item>Help! I can\'t post despite creating an account!</item>
        <item>Uhh… The post I had bookmarked is missing!</item>
        <item>Some features are not working as expected. What should I do?</item>
        <item>I have an issue with the app. I\'ll probably uninst…</item>
    </string-array>
    <string name="supp_answer1">If you\'re someone wanting to adopt a pet, you\'d probably have to search
        across multiple social media pages and newspaper listings and travel to several animal shelters.
        Or you could be a part of a relatively unknown animal shelter struggling to find homes for your animals.
        Pawestruck aims to solve this issue by providing a universal platform to post adoption alerts.</string>
    <string name="filter_by">Filter by</string>
    <string name="filter_animal1">Dog</string>
    <string name="filter_animal2">Cat</string>
    <string name="filter_animal3">Other</string>
    <string name="filter_sort_by">Sort by Date</string>
    <string name="filter_asc">Ascending</string>
    <string name="filter_dec">Descending</string>
</resources>