<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:id="@+id/otp_parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingStart="@dimen/otp_padding"
        android:paddingEnd="@dimen/otp_padding">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.hbb20.CountryCodePicker
                android:id="@+id/otp_country_picker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:ccp_autoDetectCountry="true">

            </com.hbb20.CountryCodePicker>

            <EditText
                android:id="@+id/otp_et_mobile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="AUTOFILL_HINT_PHONE"
                android:hint="@string/otp_phone"
                android:inputType="phone"
                android:singleLine="true" />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/otp_views_spacing"
            android:text="@string/otp_message"
            android:textAlignment="center" />

        <Button
            android:id="@+id/otp_button_send"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/otp_views_spacing"
            android:background="@drawable/rounded_button"
            android:text="@string/otp_send" />

        <EditText
            android:id="@+id/otp_et_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/otp_views_separator"
            android:ems="10"
            android:hint="@string/otp_code"
            android:inputType="number" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/otp_views_spacing"
            android:text="@string/otp_note"
            android:textAlignment="center" />

        <Button
            android:id="@+id/otp_button_verify"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/otp_views_spacing"
            android:background="@drawable/rounded_button"
            android:text="@string/otp_verify" />

        <ProgressBar
            android:id="@+id/otp_progress"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/otp_views_spacing"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:visibility="gone" />

    </LinearLayout>
</ScrollView>