<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingStart="@dimen/prof_padding_side"
        android:paddingEnd="@dimen/prof_padding_side"
        android:paddingBottom="@dimen/prof_padding_bot">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/prof_iv_dp"
                android:layout_width="@dimen/prof_dp"
                android:layout_height="@dimen/prof_dp"
                android:background="@drawable/rounded_image"
                android:contentDescription="@string/prof_dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/profile" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/prof_fab_dp_change"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/prof_fab_margin"
                android:clickable="true"
                android:focusable="true"
                app:backgroundTint="@color/colorSecondary"
                app:fabSize="mini"
                app:layout_constraintBottom_toBottomOf="@+id/prof_iv_dp"
                app:layout_constraintEnd_toEndOf="@+id/prof_iv_dp"
                app:srcCompat="@drawable/prof_add_dp" />

            <ProgressBar
                android:id="@+id/prof_progress"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/prof_iv_dp" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/prof_tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/prof_views_spacing"
            android:layout_marginBottom="@dimen/prof_views_separator"
            android:gravity="center"
            android:textSize="26sp" />

        <androidx.gridlayout.widget.GridLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/prof_views_separator"
            app:columnCount="3"
            app:rowCount="3">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_gravity="center"
                app:srcCompat="@drawable/prof_email" />

            <TextView
                android:id="@+id/prof_tv_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/prof_views_spacing"
                android:layout_marginRight="@dimen/prof_views_spacing"
                android:textSize="16sp"
                app:layout_gravity="center_vertical" />

            <ImageView
                android:id="@+id/prof_iv_email_status"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clickable="true"
                android:contentDescription="@string/prof_email_status"
                android:focusable="true"
                app:layout_gravity="center"
                app:srcCompat="@drawable/prof_email_unverified" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/prof_views_spacing"
                android:layout_marginBottom="@dimen/prof_views_spacing"
                app:layout_gravity="center"
                app:srcCompat="@drawable/prof_phone" />

            <TextView
                android:id="@+id/prof_tv_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/prof_views_spacing"
                android:layout_marginEnd="@dimen/prof_views_spacing"
                android:text="@string/default_field"
                android:textSize="16sp"
                app:layout_gravity="center_vertical" />

            <ImageView
                android:id="@+id/prof_iv_edit_phone"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clickable="true"
                android:contentDescription="@string/prof_edit_phone"
                android:focusable="true"
                app:layout_gravity="center"
                app:srcCompat="@drawable/prof_edit" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_gravity="center"
                app:srcCompat="@drawable/prof_location" />

            <TextView
                android:id="@+id/prof_tv_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/prof_views_spacing"
                android:layout_marginRight="@dimen/prof_views_spacing"
                android:text="@string/default_field"
                android:textSize="16sp"
                app:layout_gravity="center_vertical" />

            <ImageView
                android:id="@+id/prof_iv_edit_address"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clickable="true"
                android:contentDescription="@string/prof_edit_location"
                android:focusable="true"
                app:layout_gravity="center"
                app:srcCompat="@drawable/prof_edit" />
        </androidx.gridlayout.widget.GridLayout>

        <Button
            android:id="@+id/prof_button_signout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_button"
            android:text="@string/prof_signout" />

    </LinearLayout>

</ScrollView>


